# TeLogger

./: .gitignore  CMakeLists.txt  Logger.pro  README.md  deploy_library.cmake  main.cpp
Example/: CMakeLists.txt  main.cpp
logger/: logger.cpp  logger.h  telogger.cpp  telogger.h  telogger_global.h
